_docs/kustomize/networking/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: akash-services
  labels:
    name: akash-services
    akash.network/name: akash-services
